@@ -1,5 +1,7 @@
 [0.2.14]
 - schema: some fixes from migrator
+- schema: .days -> .time_ago
+- schema: excludeLayout + layout in filters -> layouts
 - services: db access simpler, no contextmanager
 - services: removed Base.create() method
 - services: rediscache updated
